Updated minor details in notebook

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,6 +1651,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extended models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -1719,14 +1726,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "Table 2: The OLS regression models with additional control variables<br><table style=\"text-align:center\"><tr><td colspan=\"4\" style=\"border-bottom: 1px solid black\"></td></tr>\n",
-       "<tr><td style=\"text-align:left\"></td><td colspan=\"3\"><em>Dependent variable: log_avg_incoming_delay</em></td></tr><tr><td style=\"text-align:left\"></td><tr><td></td><td colspan=\"1\">Total Throughput Control</td><td colspan=\"1\">Average Neighboring Delay</td><td colspan=\"1\">Christmas Period</td></tr><tr><td style=\"text-align:left\"></td><td>(1)</td><td>(2)</td><td>(3)</td></tr>\n",
+       "<tr><td style=\"text-align:left\"></td><td colspan=\"3\"><em>Dependent variable: log_avg_incoming_delay</em></td></tr><tr><td style=\"text-align:left\"></td><tr><td></td><td colspan=\"1\">(6)</td><td colspan=\"1\">(7)</td><td colspan=\"1\">(8)</td></tr>\n",
        "<tr><td colspan=\"4\" style=\"border-bottom: 1px solid black\"></td></tr>\n",
        "\n",
        "<tr><td style=\"text-align:left\">Intercept</td><td>1.654<sup>***</sup></td><td>0.844<sup>***</sup></td><td>0.826<sup>***</sup></td></tr>\n",
@@ -1753,10 +1760,10 @@
        "<tr><td colspan=\"4\" style=\"border-bottom: 1px solid black\"></td></tr><tr><td style=\"text-align: left\">Note:</td><td colspan=\"3\" style=\"text-align: right\"><sup>*</sup>p&lt;0.1; <sup>**</sup>p&lt;0.05; <sup>***</sup>p&lt;0.01</td></tr></table>"
       ],
       "text/plain": [
-       "<stargazer.stargazer.Stargazer at 0x226cc57f710>"
+       "<stargazer.stargazer.Stargazer at 0x226cc4e8e50>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1776,6 +1783,10 @@
     ")\n",
     "\n",
     "stargazer.show_degrees_of_freedom(False)\n",
+    "\n",
+    "# renumber the models to be 6, 7, 8\n",
+    "stargazer.show_model_numbers(False)\n",
+    "stargazer.column_labels = [\"(6)\", \"(7)\", \"(8)\"]\n",
     "\n",
     "# order the covariates\n",
     "stargazer.covariate_order(\n",
@@ -1831,6 +1842,151 @@
     "    f.write(stargazer.render_html())\n",
     "\n",
     "stargazer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Robustness checks for extended models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Table 3: Robustness check with linear model<br><table style=\"text-align:center\"><tr><td colspan=\"4\" style=\"border-bottom: 1px solid black\"></td></tr>\n",
+       "<tr><td style=\"text-align:left\"></td><td colspan=\"3\"><em>Dependent variable: avg_incoming_delay</em></td></tr><tr><td style=\"text-align:left\"></td><tr><td></td><td colspan=\"1\">(9)</td><td colspan=\"1\">(10)</td><td colspan=\"1\">(11)</td></tr>\n",
+       "<tr><td colspan=\"4\" style=\"border-bottom: 1px solid black\"></td></tr>\n",
+       "\n",
+       "<tr><td style=\"text-align:left\">Intercept</td><td>13.687<sup>***</sup></td><td>-0.014<sup></sup></td><td>1.056<sup>*</sup></td></tr>\n",
+       "<tr><td style=\"text-align:left\"></td><td>(1.679)</td><td>(1.170)</td><td>(0.638)</td></tr>\n",
+       "<tr><td style=\"text-align:left\">Weighted Betweenness</td><td>0.000<sup></sup></td><td>0.000<sup></sup></td><td>-0.000<sup></sup></td></tr>\n",
+       "<tr><td style=\"text-align:left\"></td><td>(0.000)</td><td>(0.000)</td><td>(0.000)</td></tr>\n",
+       "<tr><td style=\"text-align:left\">Num Total Trains</td><td>-0.109<sup>***</sup></td><td>-0.009<sup>**</sup></td><td>-0.009<sup>**</sup></td></tr>\n",
+       "<tr><td style=\"text-align:left\"></td><td>(0.006)</td><td>(0.004)</td><td>(0.004)</td></tr>\n",
+       "<tr><td style=\"text-align:left\">Total Distance Strength</td><td>0.132<sup>***</sup></td><td>-0.019<sup></sup></td><td>-0.019<sup></sup></td></tr>\n",
+       "<tr><td style=\"text-align:left\"></td><td>(0.018)</td><td>(0.018)</td><td>(0.018)</td></tr>\n",
+       "<tr><td style=\"text-align:left\">Total Time Strength</td><td>-0.012<sup>***</sup></td><td>-0.002<sup>**</sup></td><td>-0.002<sup>**</sup></td></tr>\n",
+       "<tr><td style=\"text-align:left\"></td><td>(0.002)</td><td>(0.001)</td><td>(0.001)</td></tr>\n",
+       "<tr><td style=\"text-align:left\">Total Speed Strength</td><td>-0.021<sup>***</sup></td><td>0.004<sup></sup></td><td>0.004<sup></sup></td></tr>\n",
+       "<tr><td style=\"text-align:left\"></td><td>(0.004)</td><td>(0.004)</td><td>(0.004)</td></tr>\n",
+       "<tr><td style=\"text-align:left\">Avg Neighboring Delay</td><td></td><td>0.927<sup>***</sup></td><td>0.928<sup>***</sup></td></tr>\n",
+       "<tr><td style=\"text-align:left\"></td><td></td><td>(0.052)</td><td>(0.052)</td></tr>\n",
+       "<tr><td style=\"text-align:left\">Christmas Period</td><td></td><td></td><td>0.804<sup></sup></td></tr>\n",
+       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td>(0.514)</td></tr>\n",
+       "<tr><td style=\"text-align:left\">Weighted Betweenness x Christmas Period</td><td></td><td></td><td>-0.000<sup></sup></td></tr>\n",
+       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td>(0.000)</td></tr>\n",
+       "\n",
+       "<tr><td style=\"text-align: left\">Weekday Dummies</td><td>YES</td><td>YES</td><td>NO</td></tr><tr><td style=\"text-align: left\">Weekday Interactions</td><td>YES</td><td>YES</td><td>NO</td></tr><td colspan=\"4\" style=\"border-bottom: 1px solid black\"></td></tr>\n",
+       "<tr><td style=\"text-align: left\">Observations</td><td>14485</td><td>14308</td><td>14308</td></tr><tr><td style=\"text-align: left\">R<sup>2</sup></td><td>0.032</td><td>0.660</td><td>0.658</td></tr><tr><td style=\"text-align: left\">Adjusted R<sup>2</sup></td><td>0.031</td><td>0.659</td><td>0.657</td></tr><tr><td style=\"text-align: left\">Residual Std. Error</td><td>32.434</td><td>19.298</td><td>19.347</td></tr><tr><td style=\"text-align: left\">F Statistic</td><td>30.164<sup>***</sup></td><td>90.052<sup>***</sup></td><td>218.252<sup>***</sup></td></tr>\n",
+       "<tr><td colspan=\"4\" style=\"border-bottom: 1px solid black\"></td></tr><tr><td style=\"text-align: left\">Note:</td><td colspan=\"3\" style=\"text-align: right\"><sup>*</sup>p&lt;0.1; <sup>**</sup>p&lt;0.05; <sup>***</sup>p&lt;0.01</td></tr></table>"
+      ],
+      "text/plain": [
+       "<stargazer.stargazer.Stargazer at 0x226d4c14e10>"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Linear model (linear avg_incoming_delays, weighted_betweenness_centrality, etc. for comparison with the same set of control variables)\n",
+    "\n",
+    "reg9 = smf.ols(\n",
+    "    \"avg_incoming_delay ~ weighted_betweenness*C(day_of_week_name, Treatment(reference='Monday')) + num_total_trains + total_distance_strength + total_time_strength + total_speed_strength\",\n",
+    "    data=df,\n",
+    ").fit(cov_type=\"HC1\")\n",
+    "\n",
+    "reg10 = smf.ols(\n",
+    "    \"avg_incoming_delay ~ weighted_betweenness*C(day_of_week_name, Treatment(reference='Monday')) + num_total_trains + total_distance_strength + total_time_strength + total_speed_strength + avg_neighboring_delay\",\n",
+    "    data=df,\n",
+    ").fit(cov_type=\"HC1\")\n",
+    "\n",
+    "reg11 = smf.ols(\n",
+    "    \"avg_incoming_delay ~ weighted_betweenness*C(christmas_period, Treatment(reference='Not Christmas')) + num_total_trains + total_distance_strength + total_time_strength + total_speed_strength + avg_neighboring_delay\",\n",
+    "    data=df,\n",
+    ").fit(cov_type=\"HC1\")\n",
+    "\n",
+    "# stargazer table\n",
+    "stargazer = Stargazer([reg9, reg10, reg11])\n",
+    "\n",
+    "stargazer.title(\"Table 3: Robustness check with linear model\")\n",
+    "\n",
+    "stargazer.custom_columns(\n",
+    "    [\n",
+    "        \"Total Throughput Control\",\n",
+    "        \"Average Neighboring Delay\",\n",
+    "        \"Christmas Period\",\n",
+    "    ],\n",
+    "    [1, 1, 1],\n",
+    ")\n",
+    "\n",
+    "stargazer.show_degrees_of_freedom(False)\n",
+    "\n",
+    "# renumber the models to be 9, 10, 11\n",
+    "stargazer.show_model_numbers(False)\n",
+    "stargazer.column_labels = [\"(9)\", \"(10)\", \"(11)\"]\n",
+    "\n",
+    "# order the covariates\n",
+    "\n",
+    "stargazer.covariate_order(\n",
+    "    [\n",
+    "        \"Intercept\",\n",
+    "        \"weighted_betweenness\",\n",
+    "        \"num_total_trains\",\n",
+    "        \"total_distance_strength\",\n",
+    "        \"total_time_strength\",\n",
+    "        \"total_speed_strength\",\n",
+    "        \"avg_neighboring_delay\",\n",
+    "        # \"day_of_week_name[T.Monday]\",\n",
+    "        # \"day_of_week_name[T.Tuesday]\",\n",
+    "        # \"day_of_week_name[T.Wednesday]\",\n",
+    "        # \"day_of_week_name[T.Thursday]\",\n",
+    "        # \"day_of_week_name[T.Friday]\",\n",
+    "        # \"day_of_week_name[T.Saturday]\",\n",
+    "        # \"day_of_week_name[T.Sunday]\",\n",
+    "        # \"weighted_betweenness:day_of_week_name[T.Monday]\",\n",
+    "        # \"weighted_betweenness:day_of_week_name[T.Tuesday]\",\n",
+    "        # \"weighted_betweenness:day_of_week_name[T.Wednesday]\",\n",
+    "        # \"weighted_betweenness:day_of_week_name[T.Thursday]\",\n",
+    "        # \"weighted_betweenness:day_of_week_name[T.Friday]\",\n",
+    "        # \"weighted_betweenness:day_of_week_name[T.Saturday]\",\n",
+    "        # \"weighted_betweenness:day_of_week_name[T.Sunday]\",\n",
+    "        \"C(christmas_period, Treatment(reference='Not Christmas'))[T.Christmas]\",\n",
+    "        \"weighted_betweenness:C(christmas_period, Treatment(reference='Not Christmas'))[T.Christmas]\",\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# rename non-filtered covariates (days of week are filtered)\n",
+    "stargazer.rename_covariates(\n",
+    "    {\n",
+    "        \"Intercept\": \"Intercept\",\n",
+    "        \"weighted_betweenness\": \"Weighted Betweenness\",\n",
+    "        \"num_total_trains\": \"Num Total Trains\",\n",
+    "        \"total_distance_strength\": \"Total Distance Strength\",\n",
+    "        \"total_time_strength\": \"Total Time Strength\",\n",
+    "        \"total_speed_strength\": \"Total Speed Strength\",\n",
+    "        \"avg_neighboring_delay\": \"Avg Neighboring Delay\",\n",
+    "        \"C(christmas_period, Treatment(reference='Not Christmas'))[T.Christmas]\": \"Christmas Period\",\n",
+    "        \"weighted_betweenness:C(christmas_period, Treatment(reference='Not Christmas'))[T.Christmas]\": \"Weighted Betweenness x Christmas Period\",\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "# add notes for weekday dummies and interactions\n",
+    "stargazer.add_line(\"Weekday Dummies\", [\"YES\", \"YES\", \"NO\"])\n",
+    "stargazer.add_line(\"Weekday Interactions\", [\"YES\", \"YES\", \"NO\"])\n",
+    "\n",
+    "# save the table to a file\n",
+    "with open(dir_config.table_dir / \"regression_table_linear_comparison.html\", \"w\") as f:\n",
+    "    f.write(stargazer.render_html())\n",
+    "\n",
+    "stargazer\n"
    ]
   }
  ],
